2017-09-13  Peter Stephenson  <p.stephenson@samsung.com>

	* 41688: Src/jobs.c: "wait" for all active jobs should ignore
	those marked STAT_NOPRINT.

	* 41679: Doc/Zsh/builtins.yo: slight clarifcation on exec of
	builtins.

2017-09-11  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Src/utils.c: internal: Document zreaddir().

2017-09-11  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: Doc/Zsh/invoke.yo: YODL compatibility fix for
	--emulate.

	* Thierry Ghelew: 41666: Src/Modules/zpty.c: zpty compatibility
	for OpenBSD.

	* 41668: Doc/Zsh/invoke.yo, Src/builtin.c, Src/init.c,
	Src/zsh.h, Test/B07emulate.ztst: Add option --emulate at
	invocation to start in correct emulation, as the ARGV0 trick
	doesn't work from other shells.

2017-09-10  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 41622: Src/exec., Test/A01grammar.ztst: exec -a arguments
	weren't sanitised.

	* 41661: Src/subst.c, Test/D04parameter.ztst: need to remove
	tokens before passing to bufferwords() for (z).

2017-09-09  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 41628 (plus 41645 by Oliver): Completion/Unix/Command/_ps:
	update options; do not reset compstate

2017-09-05  Peter Stephenson  <p.stephenson@samsung.com>

	* 41641: Src/math.c: more arithmetic operations need to be
	marked as rvalues, in particular increment and decrement.

2017-09-04  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 41633: Src/parse.c: make sure function definitions including
	anonymous functions put into the background are run in the
	background.

2017-09-04  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 41621: Completion/Unix/Command/_mkdir: Honour the 'command'
	and 'builtin' precommand modifiers.

	* 41620 (tweaked per 41622): Completion/Unix/Command/_mkdir:
	Don't offer a linux-specific option in the 'zsh' variant.

2017-09-04  Peter Stephenson  <p.stephenson@samsung.com>

	* 41637: Marc Aldorasi: Completion/Unix/Command/_objdump: