@@ -1,3 +1,11 @@
+2017-09-13  Peter Stephenson  <p.w.stephenson@ntlworld.com>
+
+	* 41698: Doc/Zsh/params.yo, Src/builtin.c, Src/exec.c,
+	Src/params.c, Src/zsh.h, Test/B02typeset.ztst,
+	Test/D04parameter.ztst: add ([key]=val) assignment syntax.
+	Still to do: allow to mix with other syntax, improve typeset -p,
+	implement [key]+=value.
+
 2017-09-13  Peter Stephenson  <p.stephenson@samsung.com>
 
 	* 41688: Src/jobs.c: "wait" for all active jobs should ignore
